<resources>
    <string name="app_name">MathEw</string>
    <string name="formula_image">Formula image</string>
    <string name="welcome_text">Scan your formula now!</string>
    <string name="capture_button_text">Capture image</string>
    <string name="result_info_text">~your result will appear here~</string>
    <string name="snap">Snap</string>
    <string name="detect">Detect</string>
</resources>