<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/maths"
        android:id="@+id/idIVCaptureImage"
        android:contentDescription="@string/formula_image"
        />

    <TextView
        android:layout_below="@+id/idIVCaptureImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_info_text"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="4dp"
        android:id="@+id/idTVDetectedText"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/idTVDetectedText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/idBtnSnap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/snap"
            android:textAllCaps="false"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/idBtnDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/detect"
            android:textAllCaps="false"
            app:backgroundTint="@color/blue" />

    </LinearLayout>

</RelativeLayout>