<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/maths"
        android:id="@+id/idIVLogo"
        android:contentDescription="@string/formula_image" />

    <TextView
        android:layout_below="@+id/idIVLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="4dp"
        android:id="@+id/idTVHead"
        />

    <Button
        android:id="@+id/idBtnCapture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTVHead"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_back"
        android:text="@string/capture_button_text"
        android:textAllCaps="false"
        app:backgroundTint="@color/blue"
        />

</RelativeLayout>